--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,16 +6,10 @@
         <div class="col-sm-5 pt-3">
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Active</a>
+                  <a class="nav-link active" [routerLink] = "['/main']">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="">Link</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="" tabindex="-1" aria-disabled="true">Disabled</a>
+                  <a class="nav-link" [routerLink] = "['issuedCerificate']">Issued Certificate</a>
                 </li>
             </ul>
         </div>
