moveback button added

--- a/src/app/certicate/certicate.component.html
+++ b/src/app/certicate/certicate.component.html
@@ -110,7 +110,7 @@
                 <div class="t m0 x4 h3 y4 ff1 fs2 fc0 sc0 ls0 ws0">Employee of the Month</div>
                 <div class="t m0 x5 h1 y5 ff1 fs0 fc0 sc0 ls0 ws0">your dedication, passion and hard work</div>
                 <div class="t m0 x6 h2 y6 ff1 fs1 fc0 sc0 ls0 ws0">{{info.Date}}</div>
-                <div class="t m0 x7 h4 y7 ff1 fs3 fc0 sc0 ls0 ws0 ml-0">{{info.Name}}</div>
+                <div class="t m0 x7 h4 y7 ff1 fs3 fc0 sc0 ls0 ws0 ml-0" style="text-transform: capitalize;">{{info.Name}}</div>
                 <div class="t m0 x8 h4 y8 ff1 fs3 fc0 sc0 ls0 ws0 ml-0">
                     <qrcode [qrdata]="value" [width]="256" [errorCorrectionLevel]="'M'"></qrcode>
                 </div>
