--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,8 +8,8 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let policy of policies">
-                <td>{{policy.id}}</td>
+            <tr *ngFor="let policy of policies;let i = index">
+                <td>{{i+1}}</td>
                 <td>
                     <div class="card mb-3" style="max-width: 600px;">
                         <div class="row no-gutters">
