--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,10 @@
         <div class="col-sm-5 pt-3">
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
-                  <a class="nav-link active" [routerLink] = "['/main']">Home</a>
+                  <a data-toggle = "tab" class="nav-link" [routerLink] = "['/main']">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" [routerLink] = "['issuedCerificate']">Issued Certificate</a>
+                  <a data-toggle = "tab" class="nav-link" [routerLink] = "['issuedCerificate']">Issued Certificate</a>
                 </li>
             </ul>
         </div>
