--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <img class="pl-5" src="../../assets/images/icons8-tree-64.png" style="height: 50px;">
         </div>
         <div class="col-sm-5 pt-3">
-            <ul class="nav nav-tabs justify-content-center">
+            <ul #mynav class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
                   <a data-toggle = "tab" class="nav-link" [routerLink] = "['/main']">Home</a>
                 </li>
