--- a/src/app/userwindow/userwindow.component.html
+++ b/src/app/userwindow/userwindow.component.html
@@ -10,7 +10,7 @@
               <div class="text-center mt-5" >
                 <img class="p-2" [src]= "viewdata.address" alt="..." style="height: 300px;width: 300px;border: solid 2px black;">
               </div>
-              <h5 class="mt-4 text-center" style="font-weight: 600;line-height: 27px;"> Plant Name : {{viewdata.Name}} <br> Plant Location : ({{viewdata.Longitude}},{{viewdata.Latitude}}) <br> Issuing Authority :</h5>
+              <h5 class="mt-4 text-center" style="font-weight: 600;line-height: 27px;"> Plant Name : {{viewdata.Name}} <br> Plant Location : ({{viewdata.Longitude}},{{viewdata.Latitude}}) <br> Issuing Authority : <br> City : {{viewdata.City}}</h5>
             </div>
             <div class="card-footer mt-3 text-muted" style="border: solid 2px black;background-color: rgba(202, 251, 128, 0.644)">
               2 days ago
