--- a/src/app/issued-main/issued-main.component.html
+++ b/src/app/issued-main/issued-main.component.html
@@ -2,8 +2,8 @@
     <table class="table table-hover">
         <thead class="thead-dark">
             <tr>
-                <th scope="col">First</th>
-                <th scope="col">Details</th>
+                <th scope="col">S. No.</th>
+                <th scope="col">Name & Details</th>
                 <th scope="col">Handle</th>
             </tr>
         </thead>
@@ -19,9 +19,8 @@
                             <div class="col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title">{{policy.Name}}</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                    <p class="card-text">City : {{policy.City}}<br> Latitude : {{policy.Latitude}}<br>Longitude : {{policy.Longitude}}<br>Name of Reciepient : {{policy.issuedTo}} <br> Date Issued : {{policy.issueDate}}.</p>
+                                    <p class="card-text"><small class="text-muted">Id : {{policy.id}}</small></p>
                                 </div>
                             </div>
                         </div>
