--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -35,7 +35,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="popupFormTitle">Modal title</h5>
+              <h5 class="modal-title" id="popupFormTitle">Provide Details:</h5>
               <button #myclose type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -93,8 +93,7 @@
                         </div>
                       </div>
                     </div>
-                    <div *ngIf="error" style="color: red;">{{ error }}</div>
-                    <button type="submit" class="btn ">Submit</button>
+                    <button type="submit" class="btn float-right mt-3">Submit</button>
                   </form>
             </div>
           </div>
