--- a/src/app/certicate/certicate.component.html
+++ b/src/app/certicate/certicate.component.html
@@ -1,4 +1,4 @@
-<div class="mt-1">
+<div class="m-2">
     <button type="button" class="btn btn-dark" (click)="convetToPDF()">Convert</button>
 </div>
 <div class="container" id="page-container" style="background-color:	#F0F0F0;padding-left: 0px;padding-right: 0px;">
@@ -22,6 +22,6 @@
         </div>
     </div>
     <div>
-        <img src="../../assets/images/tree.JPG" style="width: 173vh;height: 100px;" alt="" />
+        <img src="../../assets/images/tree.JPG" style="width: 115vh;height: 100px;" alt="" />
     </div>
 </div>
