--- a/src/app/userwindow/userwindow.component.html
+++ b/src/app/userwindow/userwindow.component.html
@@ -8,12 +8,12 @@
             <div class="card-body mt-3" style="border: solid 2px black;background-color: rgba(202, 251, 128, 0.644)">
               <h5 class="card-title" style="text-transform: capitalize; font-weight: 700;">Issued To : {{viewdata.issuedTo}}<a class="float-right" (click) = "backtosamelocation()" data-toggle="tooltip" data-placement="right" title="return back to plant location"><img style="height: 45px;" src="../../assets/images/pin (1).svg"></a><a class="float-right" (click) = "pointmyLocation()" data-toggle="tooltip" data-placement="right" title="check your location on side map"><img style="height: 45px;" src="../../assets/images/pin.svg"></a> <a [href]="gmapurl" class="float-right" target="_blank" data-toggle="tooltip" data-placement="right" title="Open Location in Google Map"><img style="height: 45px;" src="../../assets/images/google-maps (1).svg" ></a><br>Issued on : {{viewdata.issueDate}} </h5>
               <div class="text-center mt-5" >
-                <img class="p-2" [src]= "viewdata.address" alt="..." style="height: 300px;width: 300px;border: solid 2px black;">
+                <img class="p-2" [src]= "viewdata.address" alt="..." style="max-height: 500px;width: 300px;border: solid 2px black;">
               </div>
               <h5 class="mt-4 text-center" style="font-weight: 600;line-height: 27px;"> Plant Name : {{viewdata.Name}} <br> Plant Location : ({{viewdata.Longitude}},{{viewdata.Latitude}}) <br> Issuing Authority : <br> City : {{viewdata.City}}</h5>
             </div>
-            <div class="card-footer mt-3 text-muted" style="border: solid 2px black;background-color: rgba(202, 251, 128, 0.644)">
-              2 days ago
+            <div class="card-footer mt-3 text-center" style="border: solid 2px black;background-color: rgba(202, 251, 128, 0.644);font-weight: 800;">
+              &copy;ashish Designed with &hearts;
             </div>
           </div>
     </div>
