--- a/src/app/certicate/certicate.component.html
+++ b/src/app/certicate/certicate.component.html
@@ -5,11 +5,11 @@
     <div style="font-size: 40px;font-family: 'Aleo';padding-top: 15px;margin: 0px;background-color: green;text-align: center;color: white;font-size: bold;">CERTIFICATE OF PARTICIPATION</div>
     <div class="" style="text-align: center;font-family: 'Cooper Hewitt';color: #00008B;font-size: 18px;padding-top: 100px;">THIS CERTIFIES THAT</div>
     <div class="" style="text-align: center;font-family: 'Cooper Hewitt';font-size: 60px;color: darkgreen;padding-top: 10px;text-transform: capitalize;">{{info.Name}}</div>
-    <div class="" style="text-align: center;font-family: 'Cooper Hewitt';color: #00008B;font-size: 18px;padding-top: 20pxpx;">has participated in Beechtown's 16th Annual Tree Planting Day on {{info.Date}}</div>
+    <div class="" style="text-align: center;font-family: 'Cooper Hewitt';color: #00008B;font-size: 18px;padding-top: 20pxpx;">has participated in UPES 16th Annual Tree Planting Day on {{info.Date | date: 'fullDate' }}</div>
     <div class="row no-gutters" style="padding-top: 140px;padding-bottom: 52px;">
         <div class="col-lg-5">
             <hr style="width :300px;text-align: center;border-width: 2px;border-color: green;">
-            <div style="text-align: center;font-family: 'Cooper Hewitt';font-size: 16px;color: green;">Isabel Mercado</div>
+            <div style="text-align: center;font-family: 'Cooper Hewitt';font-size: 16px;color: green;">Mr. Ravi Tomar</div>
             <div style="text-align: center;font-family: 'Cooper Hewitt';font-size: 22px;color: #00008B">(FACILITATOR)</div>
         </div>
         <div class="col-lg-2 text-center">
@@ -17,7 +17,7 @@
         </div>
         <div class="col-lg-5">
             <hr style="width :280px;text-align: center;border-width: 2px;border-color: green;">
-            <div style="text-align: center;font-family: 'Cooper Hewitt';font-size: 16px;color: green;">Isabel Mercado</div>
+            <div style="text-align: center;font-family: 'Cooper Hewitt';font-size: 16px;color: green;">Ashish Bansal</div>
             <div style="text-align: center;font-family: 'Cooper Hewitt';font-size: 22px;color: #00008B">(FACILITATOR)</div>
         </div>
     </div>
