verified account acccess enabled

--- a/src/app/home-right/home-right.component.html
+++ b/src/app/home-right/home-right.component.html
@@ -36,7 +36,7 @@
             </div>
           </div>
         </div>
-        <h5>We have got you covered,Order anything,anytime!!</h5>
+        <h5>We have got you covered,Issue anytime!!</h5>
         <div class="row">
             <div class="col-lg-6">
                 <h1 class="mt-4">
@@ -53,7 +53,7 @@
                         formControlName="username"
                         class="form-control"
                         aria-describedby="emailHelp"
-                        placeholder="mobile no. or email"
+                        placeholder="Enter your Email"
                         [ngClass]="{ 'is-invalid':f.username.touched && f.username.errors }"
                       />
                       <div *ngIf="f.username.touched && f.username.errors" class="invalid-feedback">
@@ -93,9 +93,9 @@
             </div>
             <div class="col-lg-6"></div>
         </div>
-        <h5 class="pt-3">Available Everywhere,Anywhere around the world.</h5>
+        <h5 class="pt-3">Access Everywhere,Anywhere around the world.</h5>
         <h5 class=" ">
-          Spreading Smiles <img src="../../assets/images/smile (1).svg" /> .
+          Spreading Greens <img src="../../assets/images/tree.svg" style="height: 30px;"/> .
         </h5>
       </div>
 </div>
