view certificae button added

--- a/src/app/issued-main/issued-main.component.html
+++ b/src/app/issued-main/issued-main.component.html
@@ -26,7 +26,10 @@
                         </div>
                     </div>
                 </td>
-                <td><button type="button" class="btn " (click)="moveBack(policy)">Move Back</button></td>
+                <td>
+                    <button type="button" class="btn " (click)="moveBack(policy)">Move Back</button><br>
+                    <button type="button" class="btn " (click)="openCertificate(policy)">View Certificate</button>
+                </td>
             </tr>
         </tbody>
     </table>
