--- a/src/app/certicate/certicate.component.html
+++ b/src/app/certicate/certicate.component.html
@@ -2,7 +2,7 @@
     <button type="button" class="btn btn-dark" (click)="convetToPDF()">Convert</button>
 </div>
 <div class="container" id="page-container" style="background-color:	#F0F0F0;padding-left: 0px;padding-right: 0px;">
-    <div style="font-size: 40px;font-family: 'Aleo';padding-top: 15px;margin: 0px;background-color: green;text-align: center;color: white;font-size: bold;">CERTIFICATE OF PARTICIPATION</div>
+    <div style="font-size: 40px;font-family: 'Aleo';padding-top: 15px;margin: 0px;background-color: green;text-align: center;color: white;font-size: bold;text-transform: uppercase;">CERTIFICATE IN HONOUR</div>
     <div class="" style="text-align: center;font-family: 'Cooper Hewitt';color: #00008B;font-size: 18px;padding-top: 100px;">THIS CERTIFIES THAT</div>
     <div class="" style="text-align: center;font-family: 'Cooper Hewitt';font-size: 60px;color: darkgreen;padding-top: 10px;text-transform: capitalize;">{{info.Name}}</div>
     <div class="" style="text-align: center;font-family: 'Cooper Hewitt';color: #00008B;font-size: 18px;padding-top: 20pxpx;">has participated in UPES 16th Annual Tree Planting Day on {{info.Date | date: 'fullDate' }}</div>
@@ -22,6 +22,6 @@
         </div>
     </div>
     <div>
-        <img src="../../assets/images/tree.JPG" style="width: 115vh;height: 100px;" alt="" />
+        <img src="../../assets/images/tree.JPG" style="width: 1139px;height: 100px;" alt="" />
     </div>
 </div>
