--- a/src/app/issued-main/issued-main.component.html
+++ b/src/app/issued-main/issued-main.component.html
@@ -14,7 +14,7 @@
                     <div class="card mb-3" style="max-width: 600px;">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img [src]= "policy.address" class="card-img" alt="...">
+                                <img [src]= "policy.address" class="card-img" alt="..." style="orientation: portrait;">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
